@@ -1,5 +1,9 @@
 2013-05-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/evaluator_control_panel.cpp:
+	* src/qt4/evaluator_control_panel.h:
+	- ChainSelectorをウインドウとして直接実体化するように変更
+
 	* Makefile.am:
 	- refresh.xpmを追加
 
